--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": ">= 18"
+  },
   "scripts": {
     "build": "tsup src --out-dir build",
     "dev": "tsx watch src/server.ts",
@@ -17,24 +20,25 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "@fastify/cookie": "^8.3.0",
+    "dotenv": "^16.0.3",
+    "fastify": "^4.17.0",
+    "knex": "^2.4.2",
+    "pg": "^8.11.0",
+    "zod": "^3.21.4"
+  },
   "devDependencies": {
     "@rocketseat/eslint-config": "^1.2.0",
     "@types/node": "^20.2.3",
     "@types/supertest": "^2.0.12",
     "@vitest/coverage-c8": "^0.31.1",
     "eslint": "^8.41.0",
+    "sqlite3": "^5.1.6",
     "supertest": "^6.3.3",
     "tsup": "^6.7.0",
     "tsx": "^3.12.7",
     "typescript": "^5.0.4",
     "vitest": "^0.31.1"
-  },
-  "dependencies": {
-    "@fastify/cookie": "^8.3.0",
-    "dotenv": "^16.0.3",
-    "fastify": "^4.17.0",
-    "knex": "^2.4.2",
-    "sqlite3": "^5.1.6",
-    "zod": "^3.21.4"
   }
 }
